--- a/index.html
+++ b/index.html
@@ -55,9 +55,20 @@
 
       h3 {
         margin-bottom: 0;
+        font-weight: bold;
+        font-size: 1.4em;
       }
       h3 + p {
         margin-top: 0;
+      }
+
+      .btc {
+        font-family: monospace;
+        font-size: 1.4em;
+        width: 410px;
+        padding: 8px;
+        border-radius: 7px;       
+        max-width: calc(100vw - 128px); 
       }
 
     </style>
@@ -83,34 +94,41 @@
           operating system for the planets</h1>
 
 
-      <p>Democracy originated in ancient Greece.
+<!--       <p>Democracy originated in ancient Greece.
       Current model of voting is so 1800.
       Technology of horse and cart, mail pigeon,
-      ship sailing US to UK in 20+ days.</p>
+      ship sailing US to UK in 20+ days.</p> -->
 
-      <p>Now we have internet, Facebook, iPhone, Bitcoin
-      <i>(not just money but consensus protocol)</i>
-      and Elon Musk flying to Mars.</p>
+      <p>We have internet, Facebook, iPhone, blockchain, Elon Musk flying to Mars but current models of governance are stuck in 1800...</p>
+
+      <h3>Long lasting meaningful positive impact:</h3>
+      • Regenerative ecosystems, systematic change<br>
+      • Liquid democracy, <a href="https://democracy.earth">democracy.earth</a>, Liberland<br>
+      • <a href="https://en.wikipedia.org/wiki/Effective_altruism">Effective altruism</a>, <a href="https://en.wikipedia.org/wiki/Triple_bottom_line">Triple bottom l ine</a></p>      
 
 
-      <h3>Meta Project:</h3>
-      • Regenerative ecosystems<br>
-      • Systematic change<br>
-      • <a href="https://en.wikipedia.org/wiki/Effective_altruism">Effective Altruism</a><br>
-      • <a href="https://en.wikipedia.org/wiki/Triple_bottom_line">Triple Bottom Line</a></p>
+      <h3>Current mission:</h3>
+      <p>$20k for refurbishment and equipment of a maker space in Puerto Rico:</p>
 
-      <i>(in the old system it was the profit for shareholders, now it is OK to serve the planet and the people)</i>
+      <input class="btc" readonly value="1GEnesisReVCQG641yERVQgStUvqH6S9U2">
 
-      <h3>Action 1: rainforest restoration</h3>
-      <p>In many places jungle was raised to the ground. Buyind land for less than $1000 per acre, planting bamboo that captures CO<sub>2</sub> and is used to generate clean, renevable energy from biomass</p>
-      <h3>Follow up</h3>
-      <p>Network of resilient communities focused on education:<br>
-       • nature (medicinal plants)<br>
-       • technology (developer training)<br>
-       • human communication protocols</p>
+      <a href="www/images/qrcode.png" style="border-bottom: 0; position: absolute; margin-left: 10px"><img src="www/images/qrcode.png" height="50"></a>
 
-      <h3>Action 2: repurposing military production</h3>
-      <p>We can keep the complex going by building machines for agriculture and construction. No&nbsp;need to invade soveraign nations like Iraq or Afghanistan - people get angry when you bomb them.</p>
+
+      <h3>Action: rainforest restoration</h3>
+      <p>In many places jungle was cut down. Buyind land for less than $1000 per acre, planting bamboo that enriches the soil, captures CO<sub>2</sub> and is used to create construction material plus generates clean, renewable energy from biomass.</p>
+
+      <div style="margin-left: 20px">
+        <h3 style="font-size:1.2em">Follow up</h3>
+        <p>Network of resilient communities focused on education:<br>
+         • nature, food, health, nutrition<br>
+         • technology, engineering, construction<br>
+         • human communication protocols <i>(communication, relationships)</i>
+       </p>
+      </div>
+
+      <h3>Action: repurposing military production</h3>
+      <p>We can keep the complex going by building machines for agriculture and construction. No&nbsp;need to invade soveraign nations like Iraq or Afghanistan - people get angry when you destroy homes and drop bombs at them.</p>
 
 
       <!--
@@ -130,19 +148,22 @@
       <!-- ZCASH: t1TxkhAy5ofChY4zaCJsb9Dt9RTTCvmMURc -->
 
 
-      <p style="font-size: 1.4em; font-weight: bold">Read more: <a href="https://genesis.re/wiki">genesis.re/wiki#Core_Values</a></p>
+      <p style="font-size: 1.4em; font-weight: bold">Operaring principles: <a href="https://genesis.re/wiki">genesis.re/wiki#Core_Values</a></p>
 
-      <p style="font-size: 1.4em; font-weight: bold">Our HQ in a church: <a href="https://astralship.org">astralship.org</a></p>
+      <p style="font-size: 1.4em; font-weight: bold">Community in a church: <a href="https://astralship.org">astralship.org</a></p>
 
+      <p style="font-size: 1.4em; font-weight: bold">Personal data mining tool: <a href="https://mailhustle.com">mailhustle.com</a></p>
 
       <div>
         <img src="www/images/blueface.jpg" height="80" style="float:left; margin-right: 15px">
 
-        <a href="mailto:email@genesis.re">email@genesis.re</a><br>
+        <a href="mailto:email@genesis.re">email@genesis.re</a>&nbsp;&nbsp;&nbsp;
         <a href="tel:+447586294279">+44<span class="space"></span>758<span class="space"></span>629<span class="space"></span>4279</a><br>
-        <a href="https://twitter.com/stefek99">@stefek99</a><br>
+        <a href="https://michalstefanow.com">michalstefanow.com</a><br>
         Shapeshifter Transgressing<br>
-        Hyperdimensional Multiverse
+        Hyperdimensional Multiverse<br>
+        
+        <i>(realising unique skills, some areas are missing)</i>
         <div class="clearfix"></div>
 
       </div>
