--- a/index.html
+++ b/index.html
@@ -104,7 +104,7 @@
       <h3>Long lasting meaningful positive impact:</h3>
       • Regenerative ecosystems, systematic change<br>
       • Liquid democracy, <a href="https://democracy.earth">democracy.earth</a>, Liberland<br>
-      • <a href="https://en.wikipedia.org/wiki/Effective_altruism">Effective altruism</a>, <a href="https://en.wikipedia.org/wiki/Triple_bottom_line">Triple bottom l ine</a></p>      
+      • <a href="https://en.wikipedia.org/wiki/Effective_altruism">Effective altruism</a>, <a href="https://en.wikipedia.org/wiki/Triple_bottom_line">Triple bottom line</a></p>      
 
 
       <h3>Current mission:</h3>
@@ -115,7 +115,7 @@
       <a href="www/images/qrcode.png" style="border-bottom: 0; position: absolute; margin-left: 10px"><img src="www/images/qrcode.png" height="50"></a>
 
 
-      <h3>Action: rainforest restoration</h3>
+      <h3>IDEA: rainforest restoration</h3>
       <p>In many places jungle was cut down. Buyind land for less than $1000 per acre, planting bamboo that enriches the soil, captures CO<sub>2</sub> and is used to create construction material plus generates clean, renewable energy from biomass.</p>
 
       <div style="margin-left: 20px">
@@ -127,7 +127,7 @@
        </p>
       </div>
 
-      <h3>Action: repurposing military production</h3>
+      <h3>IDEA: repurposing military production</h3>
       <p>We can keep the complex going by building machines for agriculture and construction. No&nbsp;need to invade soveraign nations like Iraq or Afghanistan - people get angry when you destroy homes and drop bombs at them.</p>
 
 
