--- a/index.html
+++ b/index.html
@@ -73,16 +73,16 @@
 
     </style>
 
-    <meta property="og:title" content="genesis.re • operating system for the planets"/>
+    <meta property="og:title" content="genesis.re • long-lasting, meaningful, positive impact"/>
     <meta property="og:image" content="https://genesis.re/flower.jpg""/>
     <meta property="og:site_name" content="Architecting the new world"/>
-    <meta property="og:description" content="Visit our astralship.org chapel."/>
+    <meta property="og:description" content="Using mailhustle.com to benefit from your own data."/>
 
     <meta name="twitter:card" content="summary_large_image">
     <meta name="twitter:site" content="@genesisdotre">
     <meta name="twitter:creator" content="@stefek99">
-    <meta name="twitter:title" content="genesis.re • operating system for the planets">
-    <meta name="twitter:description" content="Architecting the new world. Visit our astralship.org chapel.">
+    <meta name="twitter:title" content="genesis.re • long-lasting, meaningful, positive impact">
+    <meta name="twitter:description" content="Architecting the new world. Using mailhustle.com to benefit from your own data.">
     <meta name="twitter:image" content="https://genesis.re/flower.jpg">
 
   </head>
@@ -90,8 +90,17 @@
 
     <!-- TODO: on mobile resize gently the font size so it fits into a single line -->
     <div class="wrapper">
-      <h1>architecting the new world<br>
-          operating system for the planets</h1>
+
+      <div style="border: 2px solid white; padding: 14px">
+        <h1 style="margin-top:0px">Current focus: <a href="https://mailhustle.com">mailhustle.com</a></h1>
+        <p>Personal data mining tool, extracting wealth of knowledge from existing Gmail inbox and Facebook data dump.</p>
+        <p style="margin-bottom:0px">At all times I remember why I do it - to empower people and to have more time IRL (in real life) rather than doing all the admin.</p>
+      </div>
+
+      <br>
+
+<!--       <h1>architecting the new world<br>
+          operating system for the planets</h1> -->
 
 
 <!--       <p>Democracy originated in ancient Greece.
@@ -99,23 +108,26 @@
       Technology of horse and cart, mail pigeon,
       ship sailing US to UK in 20+ days.</p> -->
 
-      <p>We have internet, Facebook, iPhone, blockchain, Elon Musk flying to Mars but current models of governance are stuck in 1800...</p>
+      <p></p>
 
-      <h3>Long lasting meaningful positive impact:</h3>
+      <h3>Long-lasting, meaningful, positive impact</h3>
+      <p style="margin-bottom: 0">We have internet, Facebook, iPhone, blockchain, Elon Musk flying to Mars but current models of governance are stuck in 1800... We can do better, technology is ready, it is upon us to embody paradigm shift:</p>
       • Regenerative ecosystems, systematic change<br>
       • Liquid democracy, <a href="https://democracy.earth">democracy.earth</a>, Liberland<br>
       • <a href="https://en.wikipedia.org/wiki/Effective_altruism">Effective altruism</a>, <a href="https://en.wikipedia.org/wiki/Triple_bottom_line">Triple bottom line</a></p>      
 
 
+    <!--
       <h3>Current mission:</h3>
       <p>$20k for refurbishment and equipment of a maker space in Puerto Rico:</p>
 
       <input class="btc" readonly value="1GEnesisReVCQG641yERVQgStUvqH6S9U2">
 
       <a href="www/images/qrcode.png" style="border-bottom: 0; position: absolute; margin-left: 10px"><img src="www/images/qrcode.png" height="50"></a>
+    -->
 
 
-      <h3>IDEA: rainforest restoration</h3>
+      <h3>Rainforest restoration</h3>
       <p>In many places jungle was cut down. Buyind land for less than $1000 per acre, planting bamboo that enriches the soil, captures CO<sub>2</sub> and is used to create construction material plus generates clean, renewable energy from biomass.</p>
 
       <div style="margin-left: 20px">
@@ -127,7 +139,7 @@
        </p>
       </div>
 
-      <h3>IDEA: repurposing military production</h3>
+      <h3>Repurposing military production</h3>
       <p>We can keep the complex going by building machines for agriculture and construction. No&nbsp;need to invade soveraign nations like Iraq or Afghanistan - people get angry when you destroy homes and drop bombs at them.</p>
 
 
@@ -150,20 +162,15 @@
 
       <p style="font-size: 1.4em; font-weight: bold">Operaring principles: <a href="https://genesis.re/wiki">genesis.re/wiki#Core_Values</a></p>
 
-      <p style="font-size: 1.4em; font-weight: bold">Community in a church: <a href="https://astralship.org">astralship.org</a></p>
-
-      <p style="font-size: 1.4em; font-weight: bold">Personal data mining tool: <a href="https://mailhustle.com">mailhustle.com</a></p>
+      <p style="font-size: 1.4em; font-weight: bold">Co-creating space in a church: <a href="https://astralship.org">astralship.org</a></p>
 
       <div>
-        <img src="www/images/blueface.jpg" height="80" style="float:left; margin-right: 15px">
+        <img src="www/images/blueface.jpg" height="90" style="float:left; margin-right: 15px">
 
-        <a href="mailto:email@genesis.re">email@genesis.re</a>&nbsp;&nbsp;&nbsp;
-        <a href="tel:+447586294279">+44<span class="space"></span>758<span class="space"></span>629<span class="space"></span>4279</a><br>
+        <a href="mailto:email@genesis.re">email@genesis.re</a><br><br>
+        <a href="tel:+447586294279">+44<span class="space"></span>758<span class="space"></span>629<span class="space"></span>4279</a><br><br>
         <a href="https://michalstefanow.com">michalstefanow.com</a><br>
-        Shapeshifter Transgressing<br>
-        Hyperdimensional Multiverse<br>
-        
-        <i>(realising unique skills, some areas are missing)</i>
+
         <div class="clearfix"></div>
 
       </div>
