--- a/360/smithsonian/index.html
+++ b/360/smithsonian/index.html
@@ -2,7 +2,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>Burning Man - Smithsonian</title>
+    <title>No Spectators: The Art of Burning Man - Smithsonian</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <style>
       body{
@@ -19,18 +19,18 @@
     <script src="loader/iosOverlay.js"></script>
     <script src="loader/spin.min.js"></script>
 
-    <meta property="og:title" content="Burning Man - Smithsonian"/>
+    <meta property="og:title" content="No Spectators: The Art of Burning Man - Smithsonian"/>
     <meta property="og:image" content="https://genesis.re/facebook-thumbnail.jpg"/>
     <meta property="og:site_name" content="360 image - 1.3 MB - takes a few seconds to load..."/>
     <meta property="og:description" content="I really wanted to be featured in the museum :)"/>
 
 
-<!--     <meta name="twitter:card" content="summary_large_image">
+    <meta name="twitter:card" content="summary_large_image">
     <meta name="twitter:site" content="@genesisdotre">
     <meta name="twitter:creator" content="@stefek99">
-    <meta name="twitter:title" content="Aragon at #DEVCON3">
-    <meta name="twitter:description" content="22-23-24 September co-creating the world’s first Global Solutions Day! RT always appreciated 🦄">
-    <meta name="twitter:image" content="https://genesis.re/SHA2017-resized.jpg"> -->
+    <meta name="twitter:title" content="No Spectators: The Art of Burning Man - Smithsonian">
+    <meta name="twitter:description" content="Read in the paper - there was a 8ft limit - naturally made sure I'm conforming to the non-comformist way... 🦄">
+    <meta name="twitter:image" content="https://genesis.re/360/smithsonian/preview.jpg">
 
   </head>
   <body>
