--- a/index.html
+++ b/index.html
@@ -93,8 +93,11 @@
 
       <div style="border: 2px solid white; padding: 14px">
         <h1 style="margin-top:0px">Current focus: <a href="https://mailhustle.com">mailhustle.com</a></h1>
-        <p>Personal data mining tool, extracting wealth of knowledge from existing Gmail inbox and Facebook data dump.</p>
-        <p style="margin-bottom:0px">At all times I remember why I do it - to empower people and to have more time IRL (in real life) rather than doing all the admin.</p>
+        <p style="margin-bottom:0px">Personal data analytics tool, extracting wealth of knowledge from existing Gmail inbox and Facebook data dump.
+        <br>
+        <br>
+        It is your data, change the game, be in control.</p>
+<!--         <p style="margin-bottom:0px">At all times I remember why I do it - to empower people and to have more time IRL (in real life) rather than doing all the admin.</p> -->
       </div>
 
       <br>
@@ -113,18 +116,10 @@
       <h3>Long-lasting, meaningful, positive impact</h3>
       <p style="margin-bottom: 0">We have internet, Facebook, iPhone, blockchain, Elon Musk flying to Mars but current models of governance are stuck in 1800... We can do better, technology is ready, it is upon us to embody paradigm shift:</p>
       • Regenerative ecosystems, systematic change<br>
-      • Liquid democracy, <a href="https://democracy.earth">democracy.earth</a>, Liberland<br>
-      • <a href="https://en.wikipedia.org/wiki/Effective_altruism">Effective altruism</a>, <a href="https://en.wikipedia.org/wiki/Triple_bottom_line">Triple bottom line</a></p>      
-
-
-    <!--
-      <h3>Current mission:</h3>
-      <p>$20k for refurbishment and equipment of a maker space in Puerto Rico:</p>
-
-      <input class="btc" readonly value="1GEnesisReVCQG641yERVQgStUvqH6S9U2">
-
-      <a href="www/images/qrcode.png" style="border-bottom: 0; position: absolute; margin-left: 10px"><img src="www/images/qrcode.png" height="50"></a>
-    -->
+      • Liquid democracy, <a href="https://democracy.earth">democracy.earth</a><br>
+      • Liberland, Blue Frontiers<br>
+      • <a href="https://en.wikipedia.org/wiki/Effective_altruism">Effective altruism</a>, <a href="https://en.wikipedia.org/wiki/Triple_bottom_line">Triple bottom line</a><br>
+    Meaningfully impacting every being on this 🌎🌍🌏 and beyond.</p>        
 
 
       <h3>Rainforest restoration</h3>
@@ -143,6 +138,13 @@
       <p>We can keep the complex going by building machines for agriculture and construction. No&nbsp;need to invade soveraign nations like Iraq or Afghanistan - people get angry when you destroy homes and drop bombs at them.</p>
 
 
+      <h3>BTC address:</h3>
+
+      <input class="btc" readonly value="1GEnesisReVCQG641yERVQgStUvqH6S9U2">
+
+      <a href="www/images/qrcode.png" style="border-bottom: 0; position: absolute; margin-left: 10px; margin-top: -40px;"><img src="www/images/qrcode.png" height="130"></a>
+
+
       <!--
       <h3>Project 3: life insurance policy</h3>
       <p>$1m+ insurance fund to either pay the ransom or hire ex-military ex-Navy SEALs contractors for a rescue operation. Note: these guys have fancy toys and are working like machines. If you still believe you have game theory incentives - do not mess with us - let's work together towards advancement of humanity.</p>
@@ -158,11 +160,13 @@
       <!-- DOGE: DUNRYwRyyiqjW6mNVwZCd3bDTT88k4S1Jw -->
 
       <!-- ZCASH: t1TxkhAy5ofChY4zaCJsb9Dt9RTTCvmMURc -->
-
+      <br>
+      <br>
+      <br>
 
       <p style="font-size: 1.4em; font-weight: bold">Operaring principles: <a href="https://genesis.re/wiki">genesis.re/wiki#Core_Values</a></p>
 
-      <p style="font-size: 1.4em; font-weight: bold">Co-creating space in a church: <a href="https://astralship.org">astralship.org</a></p>
+      <p style="font-size: 1.4em; font-weight: bold">Co-creating astral vortex: <a href="https://astralship.org">astralship.org</a></p>
 
       <div>
         <img src="www/images/blueface.jpg" height="90" style="float:left; margin-right: 15px">
