--- a/krypto/index.html
+++ b/krypto/index.html
@@ -125,7 +125,7 @@
 
 <p>Nie chcemy aby komukolwiek opłacało się Rahimowi zrobić krzywdę.</p>
 
-<p>Nie chcemy aby komukolwiek sie oplacalo złamać prawo - dlatego zmieniamy <a href="https://pl.wikipedia.org/wiki/Teoria_gier">teorię gier</a>, tak żeby naprawdę sie nie oplacało.</p>
+<p>Nie chcemy aby komukolwiek sie oplacało złamać prawo - dlatego zmieniamy <a href="https://pl.wikipedia.org/wiki/Teoria_gier">teorię gier</a>, tak żeby naprawdę sie nie oplacało.</p>
 
 
 <p><strong>OPCJA 1)</strong> milion pieniędzy okupu. Krótka piłka, na drzewo.</p>
