--- a/index.html
+++ b/index.html
@@ -117,9 +117,9 @@
 
       <h3>Long-lasting, meaningful, positive impact</h3>
       <p style="margin-bottom: 0">We have internet, Facebook, iPhone, blockchain, Elon Musk flying to Mars but current models of governance are stuck in 1800... We can do better, technology is ready, it is upon us to embody paradigm shift:</p>
-      • Regenerative ecosystems, systematic change<br>
-      • Liquid democracy, <a href="https://democracy.earth">democracy.earth</a><br>
-      • Liberland, Blue Frontiers<br>
+      • Regenerative culture, systematic change<br>
+      • Liquid democracy, democracy.earth<br>
+      • Liberland, Blue Frontiers, Kleros, Aragon, Bitnation<br>
       • <a href="https://en.wikipedia.org/wiki/Effective_altruism">Effective altruism</a>, <a href="https://en.wikipedia.org/wiki/Triple_bottom_line">Triple bottom line</a><br>
     Meaningfully impacting every being on this 🌎🌍🌏 and beyond.</p>        
 
@@ -137,7 +137,7 @@
       </div>
 
       <h3>Repurposing military production</h3>
-      <p>We can keep the complex going by building machines for agriculture and construction. No&nbsp;need to invade soveraign nations like Iraq or Afghanistan - people get angry when you destroy homes and drop bombs at them.</p>
+      <p>We can keep the complex going by building machines for agriculture and construction. No&nbsp;need to invade sovereign nations like Syria, Iraq or Afghanistan - people get angry when you drop bombs at them.</p>
 
 
       <h3>BTC address:</h3>
