--- a/casacrypto/index.html
+++ b/casacrypto/index.html
@@ -50,7 +50,7 @@
           This is an experimental software and while every effort was made to ensure it works "just fine", there might be some rought edges.
           <br><br>
           Get the code on <a href="https://github.com/genesisdotre/ethereum-auction">GitHub</a>, 
-          verify the source on <a href="https://https://ropsten.etherscan.io/address/{{ address }}#code">Etherscan</a>.
+          verify the source on <a href="https://ropsten.etherscan.io/address/{{ address }}#code">Etherscan</a>.
           <br>
           Clone the repo, run the Truffle tests.
           <br><br>
@@ -66,7 +66,7 @@
           
           <h4>Summary of the auction:</h4>
 
-          <strong>Deployed to <a href="https://https://ropsten.etherscan.io/address/{{ address }}#code">Ropsten</a> (testnet)</strong><br>
+          <strong>Deployed to <a href="https://ropsten.etherscan.io/address/{{ address }}#code">Ropsten</a> (testnet)</strong><br>
           <strong>Auction ends:</strong> {{ timestampEnd | amFromUnix | amDateFormat:'ddd, MMM Do YYYY, h:mm:ss a'}}<br>
           <strong>Starting price:</strong> {{ price.toFixed(2) }} ETH<br>
           <strong>How many initially for sale:</strong> {{ howMany + howManyGuaranteed }}<br>
@@ -83,7 +83,7 @@
         
 
           <h4>Current bids</h4>
-          <table class="table table-sm table-bordered">
+          <table class="table table-sm table-bordered bids">
             <tr>
               <th class="index"></th>
               <th>account</th>
@@ -154,7 +154,7 @@
           <span ng-show="! $root.metamask">
             <h3>Metamask required to obtain more data</h3>
             <p>See <a href="https://github.com/INFURA/infura/issues/13#issuecomment-405077145">this</a> and <a href="https://github.com/INFURA/infura/issues/73#issuecomment-405078968">that</a> GitHub issue. I'm not the smartest, not the most experienced Ethereum programmer on this planet and I've wasted (invested) enough time trying to get it to work. Just install <a href="https://metamask.io/">MetaMask</a> babe for full functionality, can you imagine, we are still in technology early days, internet in 1996.</p>
-            <img src="images/metamask.jpg">
+            <img src="images/metamask.jpg" style="max-width: 100%;">
           </span>
         </span>
         <span ng-show="! $root.ropsten">
