--- a/casacrypto/index.html
+++ b/casacrypto/index.html
@@ -6,6 +6,8 @@
 
     <meta name="viewport" content="width=device-width, initial-scale=1">
 
+    <link rel="icon" href="favicon.ico" type="image/x-icon" /> <!-- custom favicon for folder: https://stackoverflow.com/questions/6644684/do-you-have-to-include-link-rel-icon-href-favicon-ico-type-image-x-icon -->
+
     <meta property="og:title" content="Casa Crypto membership auction"/>
     <meta property="og:image" content="https://genesis.re/flower.jpg""/>
     <meta property="og:site_name" content="_____________________"/>
