Removing silly border radius

--- a/index.html
+++ b/index.html
@@ -27,7 +27,6 @@
         padding: 20px;
         background: rgba(0,0,0,0.8);
         box-shadow: 0px 0px 30px 10px #ffffff;
-        border-radius: 30px;
       }
 
       .space {
@@ -68,8 +67,7 @@
         font-family: monospace;
         font-size: 1.4em;
         width: 410px;
-        padding: 8px;
-        border-radius: 7px;       
+        padding: 8px;      
         max-width: calc(100vw - 128px); 
       }
 
@@ -93,7 +91,7 @@
     <!-- TODO: on mobile resize gently the font size so it fits into a single line -->
     <div class="wrapper">
 
-      <div style="border: 2px solid white; padding: 14px; border-radius: 15px;">
+      <div style="border: 2px solid white; padding: 14px;">
         <h1 style="margin-top:0px">Current focus: <a href="https://mailhustle.com">mailhustle.com</a></h1>
         <p style="margin-bottom:0px">Personal data analytics tool, extracting wealth of knowledge from existing Gmail inbox and Facebook data dump.
         <br>
