--- a/360/hack4climate/index.html
+++ b/360/hack4climate/index.html
@@ -2,7 +2,7 @@
 <!DOCTYPE html>
 <html>
   <head>
-    <title>#Hack4Climate #COP24 - lunchtime discussion</title>
+    <title>#Hack4Climate #COP24 - roundtable discussion</title>
     <meta name="viewport" content="width=device-width, initial-scale=1">
     <style>
       body{
@@ -19,8 +19,8 @@
     <script src="loader/iosOverlay.js"></script>
     <script src="loader/spin.min.js"></script>
 
-    <meta property="og:title" content="#Hack4Climate #COP24 - lunchtime discussion"/>
-    <meta property="og:image" content="https://genesis.re/facebook-thumbnail.jpg"/>
+    <meta property="og:title" content="#Hack4Climate #COP24 - roundtable discussion"/>
+    <meta property="og:image" content="https://genesis.re/360/hack4climate/preview.jpg"/>
     <meta property="og:site_name" content=""/>
     <meta property="og:description" content=""/>
 
@@ -28,7 +28,7 @@
     <meta name="twitter:card" content="summary_large_image">
     <meta name="twitter:site" content="@hack_4_climate">
     <meta name="twitter:creator" content="@marsxrobertson">
-    <meta name="twitter:title" content="#Hack4Climate #COP24 - lunchtime discussion">
+    <meta name="twitter:title" content="#Hack4Climate #COP24 - roundtable discussion">
     <meta name="twitter:description" content="">
     <meta name="twitter:image" content="https://genesis.re/360/hack4climate/preview.jpg">
 
@@ -174,7 +174,7 @@
 
       overlay.loading();
       var loader = new THREE.TextureLoader();
-      var texture = loader.load("https://i.imgur.com/QQS0x7I.jpg", onLoad, onProgress);
+      var texture = loader.load("https://i.imgur.com/2uwSH8F.jpg", onLoad, onProgress);
       sphereMaterial.map = texture;
 
 
