--- a/index.html
+++ b/index.html
@@ -91,16 +91,15 @@
     <!-- TODO: on mobile resize gently the font size so it fits into a single line -->
     <div class="wrapper">
 
-      <div style="border: 2px solid white; padding: 14px;">
+<!--       <div style="border: 2px solid white; padding: 14px;">
         <h1 style="margin-top:0px">Current focus: <a href="https://mailhustle.com">mailhustle.com</a></h1>
         <p style="margin-bottom:0px">Personal data analytics tool, extracting wealth of knowledge from existing Gmail inbox and Facebook data dump.
         <br>
         <br>
         It is your data, change the game, be in control.</p>
-<!--         <p style="margin-bottom:0px">At all times I remember why I do it - to empower people and to have more time IRL (in real life) rather than doing all the admin.</p> -->
-      </div>
+        <p style="margin-bottom:0px">At all times I remember why I do it - to empower people and to have more time IRL (in real life) rather than doing all the admin.</p>
+      </div> -->
 
-      <br>
 
 <!--       <h1>architecting the new world<br>
           operating system for the planets</h1> -->
@@ -111,19 +110,27 @@
       Technology of horse and cart, mail pigeon,
       ship sailing US to UK in 20+ days.</p> -->
 
-      <p></p>
 
-      <h3>Long-lasting, meaningful, positive impact</h3>
+      <h3>architecting the new world<br>
+          operating system for the planets</h3>
+      <br style="height: 3px">
+      <p style="margin-top: 0px"><strong style="border: 1px solid white; padding: 2px;">genesis</strong> as in source, beginning, origin<br>
+        <br style="height: 3px">
+         <strong style="border: 1px solid white; padding: 2px;">re</strong> as in renew, reset, restart, reboot, rejuvenate</p>
+
+      <h3>Paradigm shift</h3>
       <p style="margin-bottom: 0">We have internet, Facebook, iPhone, blockchain, Elon Musk flying to Mars but current models of governance are stuck in 1800... We can do better, technology is ready, it is upon us to embody paradigm shift:</p>
       • Regenerative culture, systematic change<br>
       • Liquid democracy, democracy.earth<br>
       • Liberland, Blue Frontiers, Kleros, Aragon, Bitnation<br>
       • <a href="https://en.wikipedia.org/wiki/Effective_altruism">Effective altruism</a>, <a href="https://en.wikipedia.org/wiki/Triple_bottom_line">Triple bottom line</a><br>
-    Meaningfully impacting every being on this 🌎🌍🌏 and beyond.</p>        
+    
+      Long-lasting, meaningful, positive impact.<br>
+      Every being on this planet and beyond.</p>        
 
 
       <h3>Rainforest restoration</h3>
-      <p>In many places jungle was cut down. Buyind land for less than $1000 per acre, planting bamboo that enriches the soil, captures CO<sub>2</sub> and is used to create construction material plus generates clean, renewable energy from biomass.</p>
+      <p>In many places jungle was cut down. Planting bamboo that enriches the soil, captures CO<sub>2</sub> and is used to create construction material plus generates clean, renewable energy from biomass.</p>
 
       <div style="margin-left: 20px">
         <h3 style="font-size:1.2em">Follow up</h3>
@@ -135,14 +142,18 @@
       </div>
 
       <h3>Repurposing military production</h3>
-      <p>We can keep the complex going by building machines for agriculture and construction. No&nbsp;need to invade sovereign nations like Syria, Iraq or Afghanistan - people get angry when you drop bombs at them.</p>
+      <p><a href="https://en.wikipedia.org/wiki/Swords_to_ploughshares">Swords to ploughshares</a>/ We can keep the complex going by building machines for agriculture and construction. No&nbsp;need to invade sovereign nations like Syria, Iraq or Afghanistan - people get angry when you drop bombs at them.</p>
 
 
-      <h3>BTC address:</h3>
+      <h3>Plan B</h3>
+      <p>After attending <a href="https://www.instagram.com/p/Brc1lwTBfkl/">COP24 in Poland</a> realised it might be too late to fix climate change, it's a human problem not technology problem. Designing a self-sustaining capsule that produces energy, food, water and oxygen. Learn a lot of useful skills on the way to populate other planets...</p>
+
+
+<!--       <h3>BTC address:</h3>
 
       <input class="btc" readonly value="1GEnesisReVCQG641yERVQgStUvqH6S9U2">
 
-      <a href="www/images/qrcode.png" style="border-bottom: 0; position: absolute; margin-left: 10px; margin-top: -40px;"><img src="www/images/qrcode.png" height="130"></a>
+      <a href="www/images/qrcode.png" style="border-bottom: 0; position: absolute; margin-left: 10px; margin-top: -40px;"><img src="www/images/qrcode.png" height="130"></a> -->
 
 
       <!--
@@ -160,20 +171,29 @@
       <!-- DOGE: DUNRYwRyyiqjW6mNVwZCd3bDTT88k4S1Jw -->
 
       <!-- ZCASH: t1TxkhAy5ofChY4zaCJsb9Dt9RTTCvmMURc -->
-      <br>
-      <br>
-      <br>
 
-      <p style="font-size: 1.4em; font-weight: bold">Operaring principles: <a href="https://genesis.re/wiki">genesis.re/wiki#Core_Values</a></p>
+      <h3>Operaring principles<br>
+      <a href="https://genesis.re/wiki">genesis.re/wiki#Core_Values</a></h3>
+      <p>love<br>peace<br>respect<br>trust<br>honesty<br>integrity</p>
 
-      <p style="font-size: 1.4em; font-weight: bold">Co-creating astral vortex: <a href="https://astralship.org">astralship.org</a></p>
+      <!-- <p style="font-size: 1.4em; font-weight: bold">Co-creating astral vortex: <a href="https://astralship.org">astralship.org</a></p> -->
 
       <div>
         <img src="www/images/blueface.jpg" height="90" style="float:left; margin-right: 15px">
 
         <a href="mailto:email@genesis.re">email@genesis.re</a><br><br>
-        <a href="tel:+447586294279">+44<span class="space"></span>758<span class="space"></span>629<span class="space"></span>4279</a><br><br>
+
         <a href="https://michalstefanow.com">michalstefanow.com</a><br>
+
+        <div class="clearfix"></div>  
+
+        <br>
+
+        <img src="www/images/marsrobertson.jpg" height="90" style="float:left; margin-right: 15px">
+
+        <a href="mailto:marsXrobertson@gmail.com">marsXrobertson@gmail.com</a><br><br>
+
+        <a href="https://marsrobertson.com">marsrobertson.com</a><br>
 
         <div class="clearfix"></div>
 
